opensource/mongo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
        securityContext:
          allowPrivilegeEscalation: false
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongo-pvc
